--- a/package.json
+++ b/package.json
@@ -13,9 +13,20 @@
         "autoprefixer": "^10.4.2",
         "axios": "^1.8.2",
         "concurrently": "^9.0.1",
-    "laravel-vite-plugin": "^1.0.0",
+        "laravel-vite-plugin": "^1.0.0",
         "postcss": "^8.4.31",
         "tailwindcss": "^3.1.0",
         "vite": "^5.4.11"
+    },
+    "dependencies": {
+        "@reactflow/background": "^11.3.14",
+        "@reactflow/controls": "^11.2.14",
+        "@reactflow/minimap": "^11.7.14",
+        "@reactflow/node-resizer": "^2.2.14",
+        "@types/react": "^19.1.12",
+        "@types/react-dom": "^19.1.9",
+        "react": "^19.1.1",
+        "react-dom": "^19.1.1",
+        "reactflow": "^11.11.4"
     }
 }
